# liver-segmentation

./: README.md
models/: meshLiver2mm.stl  readme
src/: AjusteManual.cxx  CMakeLists.txt  FuncionesBasicas.cxx  FuncionesDeDeformacion.cxx  FuncionesDeVisualizacion.cxx  InfoEstadisticaCorteAxial.cxx  InicializacionDeformacion.cxx  MetodoDeDeformacion.cxx  RemalladoNuevo.cxx  StopEvaluation.cxx  WriterSegmentation.cxx  ajusteSuperficie.cxx  preDeformacion.cxx  readme
